# english-bot

./: .breakpoints  README.md  data.json  db.json  engish teaching.py  main (backup 22.11.21).py  main.py  pyproject.toml
.cache/pip/wheels/7b/82/22/0f73f5a5fa5abb29aac7a06941ff561e0bb415e558bb64d467/: gazpacho-1.1-py3-none-any.whl
charset_normalizer-2.0.8.dist-info/: RECORD
data/: 1.txt  1r.txt  2.txt  2r.txt  3.txt  3r.txt  4.txt  4r.txt  5.txt  5r.txt  6.txt  6r.txt  7.txt  7r.txt  8.txt  8r.txt  9.txt  9r.txt
gazpacho-1.1.dist-info/: RECORD
pyTelegramBotAPI-4.2.0.dist-info/: RECORD
